Fix label button contents spilling out

--- a/src/style/button.css
+++ b/src/style/button.css
@@ -6,10 +6,6 @@
   height: 30px;
   width: 30px;
 
-  border: 2px solid hsla(0, 0%, 0%, 0.558);
-  border-radius: 50%;
-  box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 57%);
-
   a {
     /* Should look like a button, not a link */
     all: unset;
@@ -45,7 +41,7 @@
   border-radius: 5px;
   box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 57%);
 
-  width: 100px;
+  min-width: 100px;
   text-align: center;
 
   font-weight: 500;
@@ -69,7 +65,7 @@
   &.inline {
     height: 10px;
     flex-direction: row;
-    width: fit-content;
+    min-width: max-content;
 
     .icon {
       height: 20px;
